; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/bluetooth/extr_l2cap.c___l2cap_chan_link.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/bluetooth/extr_l2cap.c___l2cap_chan_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.l2cap_chan_list = type { %struct.sock* }
%struct.sock = type { i32 }
%struct.TYPE_2__ = type { %struct.sock*, %struct.sock* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.l2cap_chan_list*, %struct.sock*)* @__l2cap_chan_link to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__l2cap_chan_link(%struct.l2cap_chan_list* %0, %struct.sock* %1) #0 {
  %3 = alloca %struct.l2cap_chan_list*, align 8
  %4 = alloca %struct.sock*, align 8
  store %struct.l2cap_chan_list* %0, %struct.l2cap_chan_list** %3, align 8
  store %struct.sock* %1, %struct.sock** %4, align 8
  %5 = load %struct.sock*, %struct.sock** %4, align 8
  %6 = call i32 @sock_hold(%struct.sock* %5)
  %7 = load %struct.l2cap_chan_list*, %struct.l2cap_chan_list** %3, align 8
  %8 = getelementptr inbounds %struct.l2cap_chan_list, %struct.l2cap_chan_list* %7, i32 0, i32 0
  %9 = load %struct.sock*, %struct.sock** %8, align 8
  %10 = icmp ne %struct.sock* %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = load %struct.sock*, %struct.sock** %4, align 8
  %13 = load %struct.l2cap_chan_list*, %struct.l2cap_chan_list** %3, align 8
  %14 = getelementptr inbounds %struct.l2cap_chan_list, %struct.l2cap_chan_list* %13, i32 0, i32 0
  %15 = load %struct.sock*, %struct.sock** %14, align 8
  %16 = call %struct.TYPE_2__* @l2cap_pi(%struct.sock* %15)
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  store %struct.sock* %12, %struct.sock** %17, align 8
  br label %18

18:                                               ; preds = %11, %2
  %19 = load %struct.l2cap_chan_list*, %struct.l2cap_chan_list** %3, align 8
  %20 = getelementptr inbounds %struct.l2cap_chan_list, %struct.l2cap_chan_list* %19, i32 0, i32 0
  %21 = load %struct.sock*, %struct.sock** %20, align 8
  %22 = load %struct.sock*, %struct.sock** %4, align 8
  %23 = call %struct.TYPE_2__* @l2cap_pi(%struct.sock* %22)
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 1
  store %struct.sock* %21, %struct.sock** %24, align 8
  %25 = load %struct.sock*, %struct.sock** %4, align 8
  %26 = call %struct.TYPE_2__* @l2cap_pi(%struct.sock* %25)
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  store %struct.sock* null, %struct.sock** %27, align 8
  %28 = load %struct.sock*, %struct.sock** %4, align 8
  %29 = load %struct.l2cap_chan_list*, %struct.l2cap_chan_list** %3, align 8
  %30 = getelementptr inbounds %struct.l2cap_chan_list, %struct.l2cap_chan_list* %29, i32 0, i32 0
  store %struct.sock* %28, %struct.sock** %30, align 8
  ret void
}

declare dso_local i32 @sock_hold(%struct.sock*) #1

declare dso_local %struct.TYPE_2__* @l2cap_pi(%struct.sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
